--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spacing Techniques</title>
-    <link rel="stylesheet" href="../../../../../Downloads/spacing_techniques_incorrect/less/style.css">
+    <link rel="stylesheet" href="less/style.css">
 </head>
 <body>
 
